--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -81,7 +81,7 @@ jobs:
         with:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
-          # NOTE: If required, update to the appropriate source folder
+          # NOTE: If required, update to the appropriate source folde
           source: ./
 
       # If required, use the Cloud Run url output in later steps
