--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -52,7 +52,7 @@ on:
 
 env:
   PROJECT_ID: naturevive-a8549 # TODO: update Google Cloud project id
-  SERVICE: TEST_USER # TODO: update Cloud Run service name
+  SERVICE: testuser # TODO: update Cloud Run service name
   REGION: asia-south1 # TODO: update Cloud Run service region
 
 jobs:
